# ERF22

./: DockerImageOutput  arduino_move_v1.ino  follow_wall.py  lamps.py  rplidar_ros
ArduinoUltraschallTest/: ArduinoUltraschallTest.ino  README.md
automatic_lidar_mapping/: CMakeLists.txt
cad_files/: Halter_Ultrasonic.stl  Klemmer-4-Kant.stl  Steckhalter_Ultra-Sonic v3.stl  Verbinder-4Kant-Sensorgelenke_links.stl  Verbinder-4Kant-Sensorgelenke_rechts.stl  Verbinder_Gelenk.stl
documentation/: doc.aux  doc.out  doc.tex
robot_a/: follow_wall.py
robot_b_arduino/: ArduinoUltraschall4Sensors.ino
robot_b_arduino/2and2/: 2and2.ino
robot_b_arduino/ArduinoUS2/ArduinoUS2_right_front/: ArduinoUS2_right_front.ino
robot_b_arduino/ArduinoUS2/ArduinoUS_left2/: ArduinoUS_left2.ino
robot_b_arduino/ArduinoUltraschall4Sensors/: ArduinoUltraschall4Sensors.ino
robot_b_arduino/tf_test/: tf_us_c.launch
robot_b_arduino/tof_sensors/: tof_sensors.ino
rp_test/launch/: rplidar_test.launch
sascha/: navigation
sascha/automatic_lidar_mapping/: package.xml
sascha/automatic_lidar_mapping/src/: auto_map_v1.py
sascha/dumb_wall_follower/: CMakeLists.txt  package.xml  setup.py
sascha/dumb_wall_follower/launch/: debug.launch  move.launch  move_hector.launch  simulation.launch
sascha/dumb_wall_follower/param/: Robot_A_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  gmap_wall_follow.yaml  local_costmap_params.yaml
sascha/dumb_wall_follower/rviz/: see_all.rviz
sascha/dumb_wall_follower/src/: init_pose_publisher.py  initial_movement.py  lamps_node.py  main_node.py  move_client_node.py  shortest_distance_test_node.py  test_node.py
sascha/dumb_wall_follower/src/dumb_wall_follower/: methods.py
sascha/rplidar_ros/: package.xml
sascha/rplidar_ros/launch/: gmap_wall_follow.launch  gmap_wall_follow.yaml  rplidar_gmapping.launch
sascha/rplidar_ros/rviz/: gmapping.rviz
